WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284626
[GStreamer] imported/w3c/web-platform-tests/webcodecs/audio-data.any.html is a permanent failure
https://bugs.webkit.org/show_bug.cgi?id=284626
Summary
[GStreamer] imported/w3c/web-platform-tests/webcodecs/audio-data.any.html is ...
Jean-Yves Avenard [:jya]
Reported
2024-12-13 04:19:11 PST
``` --- /home/ews/worker/GTK-WK2-Tests-EWS/build/layout-test-results/imported/w3c/web-platform-tests/webcodecs/audio-data.any-expected.txt +++ /home/ews/worker/GTK-WK2-Tests-EWS/build/layout-test-results/imported/w3c/web-platform-tests/webcodecs/audio-data.any-actual.txt @@ -2,9 +2,22 @@ PASS Verify AudioData constructors PASS Verify closing and cloning AudioData PASS Test we can construct AudioData with a negative timestamp. -FAIL Test conversion of uint8 data to float32 assert_array_approx_equals: interleaved channel 0 property 1, expected 1 +/- 0.003937007874015748, expected 1 but got 0.9921875 -PASS Test conversion of int16 data to float32 -PASS Test conversion of int32 data to float32 -PASS Test conversion of float32 data to float32 -PASS Test copying out planar and interleaved data +PASS Test input array is copied on construction +PASS Test that copyTo throws if copying from interleaved with a non-zero planeIndex +NOTRUN Test conversion of u8 to u8 Got 64 but expected result 255 at index 5 when converting from u8 to u8, epsilon 0 +NOTRUN Test conversion of u8 to s16 Got 0 but expected result -16384 at index 5 when converting from u8 to s16, epsilon 256 +NOTRUN Test conversion of u8 to s32 Got 0 but expected result -1073741824 at index 5 when converting from u8 to s32, epsilon 16777216 +PASS Test conversion of u8 to f32 +NOTRUN Test conversion of s16 to u8 Got 192 but expected result 191 at index 2 when converting from s16 to u8, epsilon 0 +NOTRUN Test conversion of s16 to s16 Got -16384 but expected result 32767 at index 5 when converting from s16 to s16, epsilon 0 +NOTRUN Test conversion of s16 to s32 Got 0 but expected result -1073741824 at index 5 when converting from s16 to s32, epsilon 65536 +PASS Test conversion of s16 to f32 +NOTRUN Test conversion of s32 to u8 Got 192 but expected result 191 at index 2 when converting from s32 to u8, epsilon 0 +NOTRUN Test conversion of s32 to s16 Got 16384 but expected result 16383 at index 2 when converting from s32 to s16, epsilon 0 +NOTRUN Test conversion of s32 to s32 Got -1073741824 but expected result 2147483647 at index 5 when converting from s32 to s32, epsilon 0 +NOTRUN Test conversion of s32 to f32 Got 0 but expected result -0.5 at index 5 when converting from s32 to f32, epsilon 0 +NOTRUN Test conversion of f32 to u8 Got 0 but expected result 64 at index 5 when converting from f32 to u8, epsilon 1 +NOTRUN Test conversion of f32 to s16 Got 0 but expected result -16384 at index 5 when converting from f32 to s16, epsilon 1 +NOTRUN Test conversion of f32 to s32 Got 0 but expected result -1073741824 at index 5 when converting from f32 to s32, epsilon 256 +FAIL Test conversion of f32 to f32 assert_true: Got -0.5 but expected result 1 at index 5 when converting from f32 to f32, epsilon 0 expected true got false ```
https://ews-build.s3-us-west-2.amazonaws.com/GTK-WK2-Tests-EWS/3019fa66-71162/results.html
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-25 07:21:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39554
EWS
Comment 2
2025-02-10 02:13:40 PST
Committed
290147@main
(aee63a64ceb8): <
https://commits.webkit.org/290147@main
> Reviewed commits have been landed. Closing PR #39554 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-10 02:14:16 PST
<
rdar://problem/144515813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug