[GStreamer] imported/w3c/web-platform-tests/webcodecs/audio-data.any.html is a permanent failure https://bugs.webkit.org/show_bug.cgi?id=284626

Reviewed by Xabier Rodriguez-Calvar.

The GStreamer AudioData::copyTo() is now spec compliant, handling the various layout conversion
cases (from/to planar/interleaved) and format changes.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/audio-data.any-expected.txt: Removed.
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/audio-data.any.worker-expected.txt: Removed.
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDataAlgorithms.cpp:
(WebCore::computeCopyElementCount):
* Source/WebCore/platform/audio/gstreamer/AudioEncoderGStreamer.cpp:
(WebCore::GStreamerInternalAudioEncoder::encode):
* Source/WebCore/platform/audio/gstreamer/PlatformRawAudioDataGStreamer.cpp:
(WebCore::PlatformRawAudioData::create):
(WebCore::PlatformRawAudioDataGStreamer::numberOfFrames const):
(WebCore::PlatformRawAudioDataGStreamer::isInterleaved const):
(WebCore::PlatformRawAudioDataGStreamer::planesOfSamples):
(WebCore::layoutToString):
(WebCore::PlatformRawAudioData::copyTo):
(WebCore::getAudioConvertedForFormat): Deleted.
* Source/WebCore/platform/audio/gstreamer/PlatformRawAudioDataGStreamer.h:
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::GstMappedAudioBuffer::GstMappedAudioBuffer):
(WebCore::GstMappedAudioBuffer::samples const):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:

Canonical link: https://commits.webkit.org/290147@main