Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h
@@ -246,14 +246,17 @@ private:
 };
 
 class GstMappedAudioBuffer {
+    WTF_MAKE_TZONE_ALLOCATED(GstMappedAudioBuffer);
     WTF_MAKE_NONCOPYABLE(GstMappedAudioBuffer);
 public:
     GstMappedAudioBuffer(GstBuffer*, GstAudioInfo, GstMapFlags);
-    GstMappedAudioBuffer(GRefPtr<GstSample>, GstMapFlags);
+    GstMappedAudioBuffer(const GRefPtr<GstSample>&, GstMapFlags);
     ~GstMappedAudioBuffer();
 
     GstAudioBuffer* get();
     GstAudioInfo* info();
+
+    template<typename T> Vector<std::span<T>> samples(size_t offset) const;
 
     explicit operator bool() const { return m_isValid; }
 
